--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "pinia": "^2.0.36",
+    "sass": "^1.62.1",
+    "vis-network": "^9.1.6",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
